--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
 		integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
+	<!-- <link rel="icon" href="assets/img/viajes.svg" sizes="16x16" type="image/png"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,8 +28,20 @@
 	<header>
 		<!-- Navbar -->
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+			<!-- ------------------------------------ -->
+			<img class="imagen-viajes" src="assets/img/viajes.svg" alt="logo" class="logo-viajes">
+			<div class="texto-viajes">
+				<p>Viajes Chile</p>
+			</div>
+
+			<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" 
+			 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					 <span class="navbar-toggler-icon"></span>
+				 </button> -->
+			<!-- ------------------------------------ -->
 			<div class="container">
-				<a data-toggle="modal" data-target="#exampleModal" class="navbar-brand" href="#">M</a>
+				<!-- <a data-toggle="modal" data-target="#exampleModal" class="navbar-brand" href="#">M</a> -->
+
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 					aria-label="Toggle navigation">
@@ -96,16 +108,12 @@
 				<div class="col">
 					<div class="parrafos">
 						<section>
-							<i class="ocultar-mostrar fas fa-plane"></i>
+							<i class="ocultar-mostrar fas fa-plane fa-3x mx-2"></i>
 						</section>
 						<p class="textos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos
-							deleniti
-							totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi.
-							Deserunt
-							voluptas eveniet blanditiis possimus nemo!. Lorem, ipsum dolor sit amet consectetur
-							adipisicing
-							elit. Consectetur ullam magni, eaque doloribus cum tenetur itaque neque quam aspernatur
-							delectus
+							deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta exceptu Deserunt
+							voluptas eveniet blanditiis possimus nemo!. Lorem, ipsum dolor sit amet consectetur adipisicing
+							elit. Consectetur ullam magni, eaque doloribus cum tenetur itaque neque quam aspernatur delectus
 							veritatis fuga praesentium numquam corporis eveniet, nobis, similique quis obcaecati!</p>
 					</div>
 				</div>
@@ -204,8 +212,7 @@
 					</div>
 				</div>
 			</div>
-			</div>
-			</div>
+
 			<h3 id="contactos" class="contacto">Contacto</h3>
 			<hr>
 			<div id="contacto" class="typeform-widget" data-toggle="tooltip" data-placement="top"
