--- a/index.html
+++ b/index.html
@@ -28,19 +28,12 @@
 	<header>
 		<!-- Navbar -->
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-			<!-- ------------------------------------ -->
-			<img class="imagen-viajes" src="assets/img/viajes.svg" alt="logo" class="logo-viajes">
-			<div class="texto-viajes">
-				<p>Viajes Chile</p>
-			</div>
-
-			<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" 
-			 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-					 <span class="navbar-toggler-icon"></span>
-				 </button> -->
-			<!-- ------------------------------------ -->
 			<div class="container">
-				<!-- <a data-toggle="modal" data-target="#exampleModal" class="navbar-brand" href="#">M</a> -->
+
+				<img class="imagen-viajes" src="assets/img/viajes.svg" alt="logo" class="logo-viajes">
+				<div class="texto-viajes">
+					<p>Viajes Chile</p>
+				</div>
 
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -51,7 +44,7 @@
 					<ul class="navbar-nav ml-auto">
 
 						<li class="nav-item">
-							<a class="nav-link" href="#inicio">Inicio</a>
+							<a class="nav-link" href="#carouselExampleIndicators">Inicio</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#quienessomos">Quienes Somos</a>
@@ -101,7 +94,7 @@
 
 	<!-- Quienes Somos -->
 	<section class="somos">
-		<h1 id="quienesomos">¿Quiénes somos?</h1>
+		<h1 id="quienessomos">¿Quiénes somos?</h1>
 		<hr class=linea>
 		<div class="container hidden-xs d-none d-md-block">
 			<div class="row pt-5">
