--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<header>
+	
 		<!-- Navbar -->
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
 			<div class="container">
@@ -62,6 +62,7 @@
 
 
 		<!-- Carrusel -->
+	<header>
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -100,13 +101,16 @@
 			<div class="row pt-5">
 				<div class="col">
 					<div class="parrafos">
-						<section>
+						<div>
 							<i class="ocultar-mostrar fas fa-plane fa-3x mx-2"></i>
-						</section>
+						</div>
 						<p class="textos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos
-							deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta exceptu Deserunt
-							voluptas eveniet blanditiis possimus nemo!. Lorem, ipsum dolor sit amet consectetur adipisicing
-							elit. Consectetur ullam magni, eaque doloribus cum tenetur itaque neque quam aspernatur delectus
+							deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta
+							exceptu Deserunt
+							voluptas eveniet blanditiis possimus nemo!. Lorem, ipsum dolor sit amet consectetur
+							adipisicing
+							elit. Consectetur ullam magni, eaque doloribus cum tenetur itaque neque quam aspernatur
+							delectus
 							veritatis fuga praesentium numquam corporis eveniet, nobis, similique quis obcaecati!</p>
 					</div>
 				</div>
@@ -121,16 +125,16 @@
 							elit. Sed error, earum ipsum vero nulla minus omnis dolor quibusdam accusamus pariatur ut
 							eum
 							totam impedit consequatur similique dicta? Tenetur, voluptatibus inventore!</p>
-						<section>
+						<div>
 							<i class="ocultar-mostrar2 fa fa-anchor" aria-hidden="true"></i>
-						</section>
+						</div>
 					</div>
 				</div>
 				<div class="col">
 					<div class="parrafos">
-						<section>
+						<div>
 							<i class="ocultar-mostrar3 fa fa-car" aria-hidden="true"></i>
-						</section>
+						</div>
 						<p class="textos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos
 							deleniti
 							totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi.
@@ -145,108 +149,105 @@
 		</div>
 		</div>
 
-		<body>
-			<h2 id="destacados" class="destacados">Destacado</h2>
-			<hr class=linea>
-			<div class="container">
-				<div class="row row-cols-1 row-cols-md-3 pt-5 test">
-					<div class="col-sm-12 col-md-3">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="assets/img/card1.jpg" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="titulo1" class="card-title">Disfruta</h5>
-								<p class="texto1" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
-									elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
-									consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur
-									magnam
-									quaerat eos!</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-3">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="assets/img/card2.jpg" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="titulo2" class="card-title">Viaja</h5>
-								<p class="texto2" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
-									elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
-									consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur
-									magnam
-									quaerat eos!</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-3">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="assets/img/card3.jpg" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="titulo3" class="card-title">Comparte</h5>
-								<p class="texto3" class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing
-									elit.
-									Architecto, fuga, iusto expedita ut nulla tempore voluptatibus sed laborum deleniti
-									esse
-									inventore laboriosam consequatur? Aliquam, explicabo unde! Itaque ratione atque
-									aspernatur?</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-3">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="assets/img/card4.jpg" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="titulo4" class="card-title">Sueña</h5>
-								<p class="texto4" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
-									elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
-									consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur
-									magnam
-									quaerat eos!</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<h3 id="contactos" class="contacto">Contacto</h3>
-			<hr>
-			<div id="contacto" class="typeform-widget" data-toggle="tooltip" data-placement="top"
-				title="Contacta con nosotros" data-url="------------typeform---------"
-				style="width: 60%; height: 450px;">
-			</div>
-			<script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })()</script>
-	</section>
-
-	<!-- Footer -->
-	<footer id="footer" class="container-fluid  d-md-block  bg-info section-icons fondo-footer">
+		<h2 id="destacados" class="destacados">Destacado</h2>
+		<hr class=linea>
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 pagos-creditos hidden-xs">
-					<h4 id="viajes" class="pt-1 font-weight-bold" data-toggle="tooltip" data-placement="top"
-						title="Viaja junto a con nosotros">VIAJES CHILE</h4>
+			<div class="row row-cols-1 row-cols-md-3 pt-5 test">
+				<div class="col-sm-12 col-md-3">
+					<div class="card" style="width: 16rem;">
+						<img class="card-img-top" src="assets/img/card1.jpg" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="titulo1" class="card-title">Disfruta</h5>
+							<p class="texto1" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
+								elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
+								consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur
+								magnam
+								quaerat eos!</p>
+						</div>
+					</div>
 				</div>
-				<div class="col-lg-8 text-right fa-iconos-credito pt-1 foot">
-					<a href="" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
-					<a href="" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-					<a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-					<a href="" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+				<div class="col-sm-12 col-md-3">
+					<div class="card" style="width: 16rem;">
+						<img class="card-img-top" src="assets/img/card2.jpg" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="titulo2" class="card-title">Viaja</h5>
+							<p class="texto2" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
+								elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
+								consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur
+								magnam
+								quaerat eos!</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-3">
+					<div class="card" style="width: 16rem;">
+						<img class="card-img-top" src="assets/img/card3.jpg" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="titulo3" class="card-title">Comparte</h5>
+							<p class="texto3" class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing
+								elit.
+								Architecto, fuga, iusto expedita ut nulla tempore voluptatibus sed laborum deleniti
+								esse inventore laboriosam consequatur? Aliquam, explicabo unde! Itaque ratione atque
+								aspernatur?</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-3">
+					<div class="card" style="width: 16rem;">
+						<img class="card-img-top" src="assets/img/card4.jpg" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="titulo4" class="card-title">Sueña</h5>
+							<p class="texto4" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
+								elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
+								consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur
+								magnam
+								quaerat eos!</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</footer>
 
-	<!-- Script incluyen jquery no slim -->
-	<script src="https://code.jquery.com/jquery-3.6.0.js"
-		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-		integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-		crossorigin="anonymous"></script>
-	<!-- mi script smooth scroll -->
-	<script src="./assets/js/script.js"></script>
-</body>
+		<!-- Sección contacto, incluyendo Typeform -->
+		<section id="contactos" class="container py-5">
+			<h1 class="font-weight-bold text-uppercase">Contacto</h1>
+			<hr>
+			<div class="typeform-widget" data-url="https://form.typeform.com/to/ApuDHqh5?typeform-medium=embed-snippet"
+				style="width: 100%; height: 500px;"></div>
+			<script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })()</script>
+		</section>
 
+		<!-- Footer -->
+		<footer id="footer" class="container-fluid  d-md-block  bg-info section-icons fondo-footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4 pagos-creditos hidden-xs">
+						<h4 id="viajes" class="pt-1 font-weight-bold" data-toggle="tooltip" data-placement="top"
+							title="Viaja junto a con nosotros">VIAJES CHILE</h4>
+					</div>
+					<div class="col-lg-8 text-right fa-iconos-credito pt-1 foot">
+						<a href="https://github.com/M-Bastidas" target="_blank"><i
+								class="fab fa-github-square fa-2x"></i></a>
+						<a href="https://cl.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+						<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+						<a href="https://es-la.facebook.com" target="_blank"><i
+								class="fab fa-facebook-square fa-2x"></i></a>
+					</div>
+				</div>
+			</div>
+		</footer>
 
+		<!-- Script incluyen jquery no slim -->
+		<script src="https://code.jquery.com/jquery-3.6.0.js"
+			integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+			crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+			integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+			crossorigin="anonymous"></script>
+		<!-- mi script smooth scroll -->
+		<script src="./assets/js/script.js"></script>
 </body>
 
 </html>
